[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
oxc_allocator = "0.1.0"
oxc_ast = "0.1.0"
oxc_parser = "0.1.0"
oxc_span = "0.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
